p2/confs/app.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec: 
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec: 
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app3
spec: 
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 8080
