p2/confs/app1.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec: 
  selector:
    app: app1
  ports:
  - port: 8081
    targetPort: 8080
